Fix footer. Add scrollbar customization.

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,5 +8,5 @@
   position: fixed;
   left: 0;
   right: 0;
-  transition: all .5s;
+  transition: all $default-anim-duration;
 }
