--- a/src/styles/flex.scss
+++ b/src/styles/flex.scss
@@ -47,3 +47,7 @@
   justify-content: center;
   align-items: center;
 }
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
