--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,8 @@ $sub-heading-spacing: 1rem;
 $heading-spacing: 2rem;
 $section-spacing: 3.5rem;
 
+$default-anim-duration: .4s;
+
 /* Colors */
 $gray-200: #f3f4f6;
 $gray-400: #d1d5db;
